--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     ext {
-        compose_ui_version = '1.3.0-alpha01'
-        accompanist_version = '0.24.13-rc'
-        room_version = '2.5.0-alpha02'
+        compose_ui_version = '1.3.0-beta02'
+        accompanist_version = '0.26.3-beta'
+        room_version = '2.5.0-alpha03'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.0-alpha08' apply false
     id 'com.android.library' version '7.4.0-alpha08' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'com.google.dagger.hilt.android' version '2.42' apply false
 }
