--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         compose_ui_version = '1.3.0-beta02'
         accompanist_version = '0.26.3-beta'
         room_version = '2.5.0-alpha03'
+        kethereum_version = '0.85.7'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
