--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 buildscript {
     ext {
-        compose_ui_version = '1.3.0-beta03'
-        accompanist_version = '0.26.4-beta'
-        room_version = '2.5.0-alpha03'
+        compose_ui_version = '1.3.0-rc01'
+        accompanist_version = '0.26.5-rc'
+        room_version = '2.5.0-beta01'
         kethereum_version = '0.85.7'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.0.0-alpha01' apply false
-    id 'com.android.library' version '8.0.0-alpha01' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
-    id 'com.google.dagger.hilt.android' version '2.42' apply false
+    id 'com.android.application' version '8.0.0-alpha03' apply false
+    id 'com.android.library' version '8.0.0-alpha03' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
