--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.2"
     implementation "androidx.paging:paging-compose:1.0.0-alpha16"
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-paging:$room_version"
 
@@ -89,8 +90,8 @@ dependencies {
 
     implementation('io.coil-kt:coil-compose:2.2.2')
 
-    implementation 'io.openim:android-sdk:2.2.0@aar'
-    implementation 'io.openim:core-sdk:2.2.0@aar'
+    implementation 'io.openim:android-sdk:2.3.4.1@aar'
+    implementation 'io.openim:core-sdk:2.3.4@aar'
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -119,4 +120,7 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.6.4")
 
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.aliyun.dpa:oss-android-sdk:2.9.11'
+
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
 }
