--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.ti4n.freechat"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -56,14 +56,14 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.animation:animation:$compose_ui_version"
     implementation "androidx.compose.foundation:foundation:$compose_ui_version"
     implementation "androidx.compose.runtime:runtime:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.material:material:$compose_ui_version"
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -76,9 +76,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-navigation-material:$accompanist_version"
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
     implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-webview:$accompanist_version"
 
-    implementation "androidx.navigation:navigation-compose:2.5.2"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha16"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha17"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -125,5 +126,4 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.aar'])
 
     implementation("aws.sdk.kotlin:s3:0.17.5-beta")
-
 }
