--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_ui_version = '1.3.0-rc01'
-        accompanist_version = '0.26.5-rc'
+        compose_ui_version = '1.3.0'
+        accompanist_version = '0.27.0'
         room_version = '2.5.0-beta01'
         kethereum_version = '0.85.7'
     }
