--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.appcompat:appcompat:1.7.0-alpha01"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
